--- a/literatura.bib
+++ b/literatura.bib
@@ -31,6 +31,19 @@
 	edition = "Rev. 1",
 }
 
+@MANUAL{arc_tutorial,
+	title = "ARCNET Tutorial",
+	organization = "Contemporary Controls",
+}
+
+
+@misc{arc_doc,
+	author = "ARCNET Trade Association",
+	title = "{ARCNET  ?  An Embedded Real-Time Network}",
+	howpublished = "Dosegljivo: \url{http://www.arcnet.com/abtarcs.htm}",
+	note = "[Dostopano: 2. 7. 2015]"
+}
+
 %-------------------------- KNJIGE ---------------------------------------
 
 @book{mihelj_vodenje,
@@ -82,6 +95,23 @@
 }
 
 %-------------------------- CLANKI ---------------------------------------
+
+
+@article{almassri_pressure_sensor,
+	title={Pressure Sensor: State of the Art, Design, and Application for
+	Robotic Hand},
+	author={Almassri, Ahmed M. and Hasan, W. Z. Wan and Ahmad, S. A. and Ishak, A. J. and Ghazali, A. M. and Talib, D. N. and Wada, Chikamune},
+	journal={Hindawi Publishing Corporation, Jurnal of Sensors},
+	year={2014},
+}
+
+@article{eppinger_force_dynamics,
+	title={Three Dynamic Problems in Robot Force Control},
+	author={Eppinger, Steven D. and Seering, Warren P.},
+	journal={IEEE Transactions on Robotics and Automation},
+	year={1992},
+	pages={751 - 758},
+}
 
 @article{bejczy_dynamics,
 	title={Simplified robot arm dynamics for control},
@@ -544,8 +574,6 @@
   howpublished = "Dosegljivo: \url{http://web.archive.org}",
   note = "[Dostopano: 19. 4. 2013]"
 }
-
-
 
 
 @ARTICLE{key,
